Changelog
=========

2.6.dev0 - (unreleased)
-----------------------

2.5 - (2016-07-29)
------------------
* Bug fix: Safely get __version__ from version.txt
  [voineali refs #74283]

2.4 - (2016-07-29)
------------------
* Bug fix: Read __version__ from version.txt
  [voineali refs #74283]

2.3 - (2016-07-19)
------------------
* Change: fixed changelog markup and removed __version__
  [alecghica refs #74151]

2.2 - (2016-06-16)
------------------
* Feature: Fix Comment in sparql queries
  [lucas refs #72876]

2.1 - (2016-06-02)
------------------
* Bug fix: Fix passing of method from service to query

2.0 - (2016-04-18)
------------------
* Bug fix: fixed error reporting when running query
  [alecghica refs #68990]

1.9 - (2016-02-01)
------------------
* Bug fix: fix timeout exception call now that we have moved to eventlet
  [ichim-david refs #17334]

1.8 - (2015-10-05)
------------------
* Bug fix: set socket timeout to prevent Zope instances hanging out when the external service is not responding
  [lucas refs #29063]

1.7 - (2015-07-28)
------------------
* Change: Replace pycurl2 with eventlet
  [david-batranu refs #25721]

1.6 - (2014-09-15)
------------------
* Feature: change the default query method from GET to POST.
  [pasoviul refs #20501]

1.5 - (2013-11-21)
------------------
* Feature: added "method" as a parameter for query() and now we can use
  either GET or POST methods
  [ghicaale refs #14491]

1.4 - (2013-07-08)
------------------
* Bug fix: Use a temporary file for parsing instead of using a huge string
  [szabozo0 refs #14826]

1.3 - (2013-05-20)
------------------
* Bug fix: fixed ReST merkup under HISTORY.txt
  [ghicaale refs #14554]

1.2 - (2013-05-20)
------------------
* Upgrade step:
   - install system dependency libcurl3-dev (Debian/Ubuntu) / curl-devel (CentOS)
   - [szabozo0 refs #14349]
* Change: Use pycurl2 instead of pycurl
  [szabozo0 refs #14349]
* Bug fix: Use pycurl instead of urllib2, added timeout functionality